--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
-  "name": "evolvinglegacynft",
+  "name": "evolving-legacy-nft",
   "version": "1.0.0",
+  "description": "An evolving NFT collection on Base network with stake-to-reveal mechanism",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test",
+    "compile": "hardhat compile",
+    "deploy:goerli": "hardhat run scripts/deploy.js --network base-goerli",
+    "deploy:mainnet": "hardhat run scripts/deploy.js --network base-mainnet",
+    "generate-metadata": "node scripts/generate-metadata.js",
+    "verify": "hardhat verify",
+    "node": "hardhat node",
+    "clean": "hardhat clean"
   },
-  "keywords": [],
+  "keywords": [
+    "nft",
+    "base",
+    "blockchain",
+    "ethereum",
+    "smart-contract",
+    "erc721a"
+  ],
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "license": "MIT",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@openzeppelin/contracts": "^5.2.0",
-    "dotenv": "^16.4.7",
-    "erc721a": "^4.3.0",
-    "hardhat": "^2.22.18"
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@openzeppelin/contracts": "^5.0.0",
+    "dotenv": "^16.3.1",
+    "erc721a": "^4.2.3",
+    "hardhat": "^2.19.1"
   },
   "dependencies": {
-    "evolvinglegacynft": "file:"
+    "evolving-legacy-nft": "file:"
   }
 }
