--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,13 @@ PRIVATE_KEY=your_private_key_here
 
 # API Keys
 BASESCAN_API_KEY=your_basescan_api_key_here
+COINMARKETCAP_API_KEY=your_coinmarketcap_api_key_here
 
 # IPFS/Metadata
-METADATA_BASE_URI=your_metadata_base_uri_here 
+METADATA_BASE_URI=your_metadata_base_uri_here
+
+# Gas Reporter
+REPORT_GAS=true
+
+# CoinMarketCap API Key
+COINMARKETCAP_API_KEY=your_coinmarketcap_api_key_here 
